--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "papaparse": "^5.4.1",
     "pinia": "^2.2.2",
     "vue": "^3.4.37",
     "vue3-dropzone": "^2.2.1"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.14",
     "@vitejs/plugin-vue": "^5.1.2",
     "naive-ui": "^2.39.0",
     "sass-embedded": "^1.77.8",
