--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.14",
+    "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "^5.1.2",
     "naive-ui": "^2.39.0",
     "sass-embedded": "^1.77.8",
