--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "@types/papaparse": "^5.3.14",
     "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "^5.1.2",
+    "gh-pages": "^6.1.1",
     "naive-ui": "^2.39.0",
     "sass-embedded": "^1.77.8",
     "typescript": "^5.5.3",
